@@ -76,6 +76,7 @@
 * `loop (;0;) {...}` will no longer execute the loop body.
 * `$obj.method($arg1, $arg2)` can now MMD dispatche over all arguments.
 * Hash and array sub parameters are read-only by default, same as scalars.
+* Slurpy hash parameters no longer count as nonslurpy during arity matching.
 
 == Changes for 6.2.3 (r3111) - May 12, 2005
 
